# sudoku-solver-poc

./: Dockerfile.bot  README.md  bot.sh  mnist-fit.keras  mnist.keras  pyproject.toml
src/bot/: __main__.py  app.py  handlers.py
src/recognizer/: extractor.py  fitter.py  recognizers.py
src/sudoku/: sudoku.py  test_sudoku.py
